# configfile

./: .gitignore  BSD3  COPYRIGHT  ConfigFile.cabal  INSTALL  INSTALL-win.txt  Makefile  MissingH.cabal  README  README.md  haskell-configfile_1.0.5.orig.tar.gz.delta  haskell-configfile_1.0.5.orig.tar.gz.id  haskell-configfile_1.0.6.orig.tar.gz.delta  haskell-configfile_1.0.6.orig.tar.gz.id  wintest.bat
.github/workflows/: main.yml
debian/: changelog  control  rules
src/Data/: ConfigFile.hs
src/Data/ConfigFile/: Lexer.hs  Monadic.hs  Parser.hs  Types.hs
testsrc/: Tests.hs  runtests.hs
testsrc/ConfigParser/: Maintest.hs  Parsertest.hs
