Name: ConfigFile
Version: 1.0.0
License: LGPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Copyright: Copyright (c) 2004-2006 John Goerzen
homepage: http://software.complete.org/configfile
synopsis: Configuration file reading & writing
Stability: Stable
Hs-Source-Dirs: src
Exposed-Modules: Data.ConfigFile,
    Data.ConfigFile.Types,
    Data.ConfigFile.Parser,
Other-Modules: Data.ConfigFile.Lexer
Extensions: ExistentialQuantification, OverlappingInstances, 
   UndecidableInstances
Build-Depends: parsec, base,
               haskell98, mtl, MissingH>=0.18.0
GHC-Options: -O2

Executable: runtests
Buildable: False
Main-Is: runtests.hs
HS-Source-Dirs: testsrc, .
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances, CPP
