Name: ConfigFile
Version: 1.1.4
License: BSD3
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Copyright: Copyright (c) 2004-2014 John Goerzen
license-file: COPYRIGHT
extra-source-files: README,
                    Makefile,
                    COPYRIGHT, LGPL-2.1, BSD3,
                    testsrc/ConfigParser/test.cfg
Category: Parsing
homepage: http://software.complete.org/configfile
synopsis: Configuration file reading & writing
Description: Parser and writer for handling sectioned config files in
 Haskell.
 .
  The ConfigFile module works with configuration files in a standard
 format that is easy for the user to edit, easy for the programmer
 to work with, yet remains powerful and flexible.  It is inspired by,
 and compatible with, Python's ConfigParser module.  It uses files
 that resemble Windows .INI-style files, but with numerous
 improvements.
 .
 ConfigFile provides simple calls to both read and write config files.
 It's possible to make a config file parsable by this module,
 the Unix shell, and make.
Stability: Stable
Build-Type: Simple
Cabal-Version: >=1.8

Library
  Hs-Source-Dirs: src
  Exposed-Modules: Data.ConfigFile,
    Data.ConfigFile.Types,
    Data.ConfigFile.Parser,
    Data.ConfigFile.Monadic
  Other-Modules: Data.ConfigFile.Lexer
  Extensions: ExistentialQuantification,
   UndecidableInstances, TypeSynonymInstances, FlexibleContexts,
   FlexibleInstances
  Build-Depends: parsec, base < 5,
                mtl, MissingH>=1.0.0, containers
  GHC-Options: -Wall

Test-Suite runtests
  Type: exitcode-stdio-1.0
  Build-depends: base, ConfigFile, MissingH, HUnit
  Main-Is: runtests.hs
  HS-Source-Dirs: testsrc
  Other-Modules: Tests, ConfigParser.Maintest, ConfigParser.Parsertest
  Extensions: ExistentialQuantification,
    UndecidableInstances, CPP, TypeSynonymInstances, FlexibleContexts,
    FlexibleInstances
  GHC-Options: -Wall
