-- arch-tag: MissingH main description file
Name: MissingH
Version: 0.18.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Copyright: Copyright (c) 2004-2006 John Goerzen
homepage: http://software.complete.org/missingh
synopsis: Large utility library
Stability: Beta
Hs-Source-Dirs: src
Exposed-Modules: Data.ConfigFile,
    Data.ConfigFile.Types,
    Data.ConfigFile.Parser,
Other-Modules: Data.ConfigFile.Lexer
Extensions: ExistentialQuantification, OverlappingInstances, 
   UndecidableInstances, CPP
Build-Depends: network, parsec, base,
               haskell98, mtl, HUnit, regex-compat, QuickCheck, FilePath,
               hslogger
-- Cabal will automatically add unix here on non-Windows platforms
GHC-Options: -O2

Executable: runtests
Buildable: False
Main-Is: runtests.hs
HS-Source-Dirs: testsrc, .
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances, CPP
